Fixing thumnail spacing

--- a/assets/theme/clixtv/src/ui/common/container/content-callout.less
+++ b/assets/theme/clixtv/src/ui/common/container/content-callout.less
@@ -122,7 +122,7 @@
         font-family: @font-primary-bold;
         font-size: 14px;
         color: @color-white;
-        letter-spacing: -0.5px;
+        letter-spacing: -0.4px;
         line-height: 16px;
         display: block;
         white-space: nowrap;
